--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/debruen/i",
+  "repository": "git+https://github.com/debruen/i.git",
   "keywords": [
     "interface"
   ],
@@ -14,5 +14,8 @@
   "license": "",
   "devDependencies": {
     "electron": "^19.0.4"
+  },
+  "dependencies": {
+    "p": "debruen/p"
   }
 }
